DL: Add style for mobile, fix search term 1. Adjust column overflow and margind for mobile 2. Fix search to trim spaces and be case-insensitive

--- a/src/components/MembersList/MembersList.scss
+++ b/src/components/MembersList/MembersList.scss
@@ -7,12 +7,19 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+
+        @include mobile-only {
+            flex-direction: column;
+        }
     }
 
     &__count-wrapper {
         display: flex;
         flex-direction: row;
         align-items: center;
+        @include mobile-only {
+            margin: 0.5rem 0; 
+        }
     }
 
     &__count {
@@ -31,6 +38,11 @@
         list-style-type: none;
         color: #505050;
         margin: 0.5rem 1rem;
+        overflow: hidden;
+
+        @include mobile-only {
+            margin: 0.5rem 0;
+        }
     }
 
     &__container {
@@ -62,9 +74,15 @@
 
 .member-card__background {
     border-bottom: 1px solid #828282;
-    margin: 0.5rem 1rem;
+    margin: 0 1rem;
+        @include mobile-only {
+            margin: 0;
+        }
+        
         :hover, :active {
         background-color: #C8EAFF;
+
+        
     }
     }
 
@@ -100,6 +118,7 @@
 
     &__email {
         color: #505050;
+        overflow: auto;
     }
 }
 
